apps/demo/overlay/dev/demo-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    deployment.environment: development
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment.environment: development
    spec:
      containers:
        - name: demo-dev
          image: jerryworld/demo-dev:96a9083a143447bfd0b8fc7bcf8ab22ce5cc6159
          ports:
            - containerPort: 9000
