apps/demo/overlay/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    deployment.environment: development
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment.environment: development
    spec:
      containers:
        - name: demo
          image: jerryworld/demo:7a528423
          ports:
            - containerPort: 9000
