apps/demo/overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: jerry.world
      http:
        paths:
          - path: /demo-dev
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 9000
